...
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IPI-oP-SF1">
                                                <rect key="frame" x="0.0" y="24.5" width="315" height="30"/>
                                                <accessibility key="accessibilityConfiguration" identifier="emailTextField"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="30" id="VNL-wD-c3y"/>
...
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1AS-ts-0SA">
                                                <rect key="frame" x="0.0" y="88.5" width="315" height="30"/>
                                                <accessibility key="accessibilityConfiguration" identifier="passwordTextField"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="30" id="KLS-VZ-wWH"/>
...
                                        <rect key="frame" x="52.5" y="263.5" width="250" height="29"/>
                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <accessibility key="accessibilityConfiguration" identifier="registerButton"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="250" id="Czv-db-z2M"/>
...
                                                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Nome" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OaL-Lx-Gpp">
                                                                                <rect key="frame" x="20" y="10" width="315" height="40"/>
                                                                                <accessibility key="accessibilityConfiguration" identifier="nameTextField">
                                                                                    <accessibilityTraits key="traits" none="YES"/>
                                                                                </accessibility>
...
                                                                                </constraints>
                                                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                                <textInputTraits key="textInputTraits" returnKeyType="continue"/>
                                                                                <connections>
                                                                                    <action selector="keyboardDoneButton:" destination="qAY-VW-iGp" eventType="primaryActionTriggered" id="jRZ-nf-mIY"/>
...
                                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Confirmar E-mail" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="l8D-Ha-vAY">
                                                                        <rect key="frame" x="20" y="10" width="315" height="40"/>
                                                                        <accessibility key="accessibilityConfiguration" identifier="emailConfirmationTextField"/>
                                                                        <constraints>
                                                                            <constraint firstAttribute="height" constant="40" id="qwU-gp-5nv"/>
...
                                                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Confirmar Senha" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="P4a-B3-j0f">
                                                                                <rect key="frame" x="20" y="10" width="137.5" height="40"/>
                                                                                <accessibility key="accessibilityConfiguration" identifier="passwordConfirmationTextField"/>
                                                                                <constraints>
                                                                                    <constraint firstAttribute="height" constant="40" id="wU3-Ua-YRz"/>
...
                                                <rect key="frame" x="20" y="25" width="335" height="55"/>
                                                <color key="backgroundColor" name="customBlue"/>
                                                <accessibility key="accessibilityConfiguration" identifier="confirmButton"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="55" id="oJV-6k-RAB"/>
...
