//
//  Configuration.swift
//  MinhasPautas
//
//  Created by Hugo Hernany on 13/05/20.
//  Copyright © 2020 Hugo Hernany. All rights reserved.
//

import Foundation

final class ConfigurationKeys {
    static let isFirstTimeUser = "isFirstTimeUser"
    static let isUITest = "isUITest"
}
