...
                        <viewLayoutGuide key="safeArea" id="SRj-Gy-chD"/>
                    </view>
                    <navigationItem key="navigationItem" title="Minhas Pautas" id="H59-VN-R7g">
                        <barButtonItem key="backBarButtonItem" title="Voltar" id="CnJ-FZ-6ye"/>
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="sEN-VK-ogb">
...
                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
                    <connections>
                        <outlet property="addButton" destination="sEN-VK-ogb" id="Ce4-j4-ZWj"/>
                        <outlet property="noResultLabel" destination="aT7-v5-KON" id="9gT-cv-Hv0"/>
                        <outlet property="segmentedControl" destination="gXa-hf-Mfu" id="6mE-dd-BkE"/>
...
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ElQ-2N-E1U">
                                        <rect key="frame" x="0.0" y="24.5" width="355" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="titleTextField"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="30" id="eJ4-JH-6iA"/>
...
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Lok-2N-iRG">
                                        <rect key="frame" x="0.0" y="88.5" width="355" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="descriptionTextField"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="30" id="U24-Hi-21v"/>
...
                                <rect key="frame" x="10" y="182.5" width="355" height="390.5"/>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="contentTextView"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0 de 1000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0bG-eo-Tgy">
                                        <rect key="frame" x="294.5" y="11" width="70.5" height="18"/>
                                        <accessibility key="accessibilityConfiguration" identifier="qtdCharactersLabel"/>
                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
                                        <nil key="highlightedColor"/>
...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Autor" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oj9-uZ-jlA">
                                        <rect key="frame" x="10" y="11" width="39" height="18"/>
                                        <accessibility key="accessibilityConfiguration" identifier="authorLabel"/>
                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
                                        <nil key="highlightedColor"/>
...
                        <viewLayoutGuide key="safeArea" id="z9Y-AZ-f4z"/>
                    </view>
                    <navigationItem key="navigationItem" title="Nova Pauta" largeTitleDisplayMode="never" id="27V-tb-mzu">
                        <barButtonItem key="backBarButtonItem" title="Voltar" id="RHk-0Y-8RF"/>
                        <barButtonItem key="rightBarButtonItem" title="Criar" id="mKH-dx-hfK">
...
                        <outlet property="authorLabel" destination="oj9-uZ-jlA" id="YDK-fw-4d2"/>
                        <outlet property="contentTextView" destination="o58-26-LQL" id="9kN-j9-DkI"/>
                        <outlet property="createButton" destination="mKH-dx-hfK" id="gGN-vv-3aZ"/>
                        <outlet property="descriptionTextField" destination="Lok-2N-iRG" id="INl-tb-Cl6"/>
                        <outlet property="footerViewBottom" destination="JbH-zs-jwk" id="Wdb-Mh-mRD"/>
...
